--- a/etherealize/css/color.css
+++ b/etherealize/css/color.css
@@ -23,7 +23,14 @@
 	background:#0ba4d6;
 }
 
+.logo-primary-light{
+	color:white;
+	text-shadow:0px 0px 15px white;
+}
 
+.logo-primary-dark{
+	color:black;
+}
 
 @media (min-width: 768px) {
 .team-box:hover .detail, .blog-box:hover .btn-gray {
